cli/tests/testdata/error_missing_module_named_import.ts.out
error: Cannot resolve module "[WILDCARD]/does_not_exist.js" from "[WILDCARD]/error_missing_module_named_import.ts".
    at [WILDCARD]/error_missing_module_named_import.ts:1:0
